--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
+    "typedoc": "^0.24.6",
     "typescript": "^4.7.4"
   },
   "jest": {
